Changsha review updated

--- a/tourpackage/changsha/changsha-food-tour-details.html
+++ b/tourpackage/changsha/changsha-food-tour-details.html
@@ -201,6 +201,24 @@
 <li>Bring sun protection and rain gear as needed</li>
 <li>Tour operates rain or shine</li></ul>
 </section>
+
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Elena – Greece</strong>
+    <p>“Really enjoyed trying the sweet rice balls. Our guide was patient and explained the local food culture well.”</p>
+  </div>
+  <div class="review">
+    <strong>Raj – India</strong>
+    <p>“The crispy meatballs were surprisingly tasty! The retro food court had a great atmosphere. Guide was friendly and made the night special.”</p>
+  </div>
+  <div class="review">
+    <strong>Mia – South Korea</strong>
+    <p>“A wonderful tour with delicious non-spicy dishes. Loved ending the evening at Du Fu Pavilion. The guide was attentive and warm.”</p>
+  </div>
+</section>
+
+
 </main>
 </div>
 <footer>
