--- a/tourpackage/changsha/changsha-normal-tour-details.html
+++ b/tourpackage/changsha/changsha-normal-tour-details.html
@@ -199,6 +199,33 @@
 <li>Bring sun protection and rain gear as needed</li>
 <li>Tour operates rain or shine</li></ul>
 </section>
+
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Olivia – Canada</strong>
+    <p>“Loved the vibe at Yuelu Academy. Our guide was so patient and explained everything clearly.”</p>
+  </div>
+  <div class="review">
+    <strong>Jasper – Netherlands</strong>
+    <p>“The Orange Isle views blew me away! The guide made the history come alive with stories. Great day overall.”</p>
+  </div>
+  <div class="review">
+    <strong>Mei – Singapore</strong>
+    <p>“Such a fun day! The lacquer fan painting was surprisingly intricate. The night market was buzzing, and we tasted so many local snacks. The guide was attentive and friendly throughout.”</p>
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
 </main>
 </div>
 <footer>
