Chengdu Chongqing Review

--- a/tourpackage/chengdu/chengdu-food-tour-details.html
+++ b/tourpackage/chengdu/chengdu-food-tour-details.html
@@ -214,6 +214,24 @@
 <li>Bring sun protection and rain gear as needed</li>
 <li>Tour operates rain or shine</li></ul>
 </section>
+
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Hannah – Australia</strong>
+    <p>“Really enjoyed the variety of snacks. The guide was helpful and patient. Loved the vibe of the night market.”</p>
+  </div>
+  <div class="review">
+    <strong>Marek – Poland</strong>
+    <p>“Wow, the spicy hotpot was intense but so worth it! Our guide explained the dishes clearly and was very friendly. The tuk-tuk ride made it even more fun. Highly recommended!”</p>
+  </div>
+  <div class="review">
+    <strong>Aya – Japan</strong>
+    <p>“An unforgettable evening tasting local specialties. The guide shared great stories about Chengdu’s food culture, making the experience much richer.”</p>
+  </div>
+</section>
+
+
 </main>
 </div>
 <footer>
