--- a/tourpackage/chengdu/chengdu-normal-tour-details.html
+++ b/tourpackage/chengdu/chengdu-normal-tour-details.html
@@ -204,6 +204,25 @@ X<strong>iaotong Alley &amp; Paotongshu Street:</strong> Just a short walk away,
 <li>Bring sun protection and rain gear as needed</li>
 <li>Tour operates rain or shine</li></ul>
 </section>
+
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Andrea – Italy</strong>
+    <p>"Great! The Chengdu Museum was fascinating—so many ancient artifacts and cultural exhibits. Our guide was friendly and knowledgeable. Highly recommend!"</p>
+  </div>
+  <div class="review">
+    <strong>Maria – Spain</strong>
+    <p>"Loved our guide!! The fan painting workshop was a unique experience, and the night market had such a lively atmosphere. A perfect way to experience Chengdu's culture."</p>
+  </div>
+  <div class="review">
+    <strong>Emily – United States</strong>
+    <p>"Our guide tailored the pace to our group, making it a perfect day trip."</p>
+  </div>
+</section>
+
+
+
 </main>
 </div>
 <footer>
