--- a/tourpackage/chongqing/chongqing-beibei-tour-details.html
+++ b/tourpackage/chongqing/chongqing-beibei-tour-details.html
@@ -194,6 +194,24 @@
 <li>Bring sun protection and rain gear as needed</li>
 <li>Tour operates rain or shine</li></ul>
 </section>
+
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Sofia - Spain</strong>
+    <p>“Loved our tour!! The mountain scenery was breathtaking, and the historic campus had such a peaceful vibe. Exploring the old street was a treat—so many little cafés and street food stalls. Our guide was warm, spoke Spanish fluently, and made everything easy. Can’t wait to come back!”</p>
+  </div>
+  <div class="review">
+    <strong>Lillian – United States</strong>
+    <p>“I had a fantastic experience with our Beibei tour! From the moment we met our guide, I felt comfortable and looked after. He tailored the tour to my interests—whether it was local architecture, university life, or traditional tea. The combination of natural beauty, educational walk, and charming streets made it so well-rounded. The guide’s enthusiasm and knowledge were outstanding. Highly recommend!!”</p>
+  </div>
+  <div class="review">
+    <strong>Luca – Italy</strong>
+    <p>“Great! Our guide was fantastic—very friendly and patient. We started with a serene hike up, soaking in the views, then moved on to the beautiful Southwest University campus. Walking along the old street with its local flavors and quaint shops felt so authentic. The guide spoke great English and shared fun facts about Beibei’s history and tea culture. We made the most of our day—highly recommend!”</p>
+  </div>
+</section>
+
+
 </main>
 </div>
 <footer>
