--- a/tourpackage/chongqing/chongqing-bishan-tour-details.html
+++ b/tourpackage/chongqing/chongqing-bishan-tour-details.html
@@ -199,6 +199,24 @@
 <li>Due to Chongqing's unique traffic conditions, certain congested areas may be accessed by taxi instead of private car. We appreciate your understanding and flexibility.</li>
 </ul>
 </section>
+
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Diego – Spain</strong>
+    <p>"Loved our experience!! The century-old chapel was beautiful, and the countryside eco-zone had such a relaxing vibe. A perfect day away from the city."</p>
+  </div>
+  <div class="review">
+    <strong>Dan – United States</strong>
+    <p>"Great experience! Xiuhu Park was serene, and the craft village offered unique handmade souvenirs. Our guide tailored the pace to our group, making it a perfect day trip."</p>
+  </div>
+  <div class="review">
+    <strong>Amie – Italy</strong>
+    <p>"Great! The Dayuanxiang Woodcarving Museum was a hidden gem—so many intricate carvings and a peaceful atmosphere. Our guide was friendly and knowledgeable. Highly recommend!"</p>
+  </div>
+</section>
+
+
 </main>
 </div>
 <footer>
