--- a/tourpackage/chongqing/chongqing-heritage-tour-details.html
+++ b/tourpackage/chongqing/chongqing-heritage-tour-details.html
@@ -205,6 +205,23 @@ Walk along Bai Xiang Street, where every stone tells a story from Chongqing’s 
 <li>Due to Chongqing's unique traffic conditions, certain congested areas may be accessed by taxi instead of private car. We appreciate your understanding and flexibility.</li>
 </ul>
 </section>
+
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Lucas – Italy</strong>
+    <p>"The block printing was fun, and the tea at the old teahouse was so calming. A perfect way to experience Chongqing's culture."</p>
+  </div>
+  <div class="review">
+    <strong>Maria – Spain</strong>
+    <p>"Great! The incense-making workshop was fascinating—so many scents and techniques. Our guide was friendly and explained everything clearly. Highly recommend!"</p>
+  </div>
+  <div class="review">
+    <strong>Sophie – France</strong>
+    <p>"Fantastic experience! The mineral-pigment painting was a unique touch, and the tea ceremony felt like stepping back in time. Would recommend!!"</p>
+  </div>
+</section>
+
 </main>
 </div>
 <footer>
