--- a/tourpackage/chongqing/chongqing-nightglow-tour-details.html
+++ b/tourpackage/chongqing/chongqing-nightglow-tour-details.html
@@ -197,6 +197,23 @@ The magical and chill evening ends with a hotel drop-off, leaving you with unfor
 <li>Due to Chongqing's unique traffic conditions, certain congested areas may be accessed by taxi instead of private car. We appreciate your understanding and flexibility.</li>
 </ul>
 </section>
+
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Isabella – Italy</strong>
+    <p>"Great! The secret viewpoint was a hidden gem—breathtaking views of the city at night. Our guide was friendly and knowledgeable, making the experience unforgettable."</p>
+  </div>
+  <div class="review">
+    <strong>Carlos – Spain</strong>
+    <p>"The old streets were charming, and the snacks were delicious. A perfect way to experience Chongqing's nightlife."</p>
+  </div>
+  <div class="review">
+    <strong>Emily – United States</strong>
+    <p>"Amazing experience! The Yangtze River Cableway offered stunning views, and the neon lights of Hongyadong were mesmerizing. Highly recommend!!"</p>
+  </div>
+</section>
+
 </main>
 </div>
 <footer>
