--- a/tourpackage/chongqing/chongqing-nospice-tour-details.html
+++ b/tourpackage/chongqing/chongqing-nospice-tour-details.html
@@ -213,6 +213,24 @@
 <li>Notify the guide of any dietary restrictions or allergies in advance. We are happy to personalise your menu at each stop. </li>
 </ul>
 </section>
+
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Roxanne – Singapore</strong>
+    <p>“So glad we booked this! I finally got to enjoy Chongqing food without burning my mouth. Loved our guide, he really listened.”</p>
+  </div>
+  <div class="review">
+    <strong>David – UK</strong>
+    <p>“Great tour! I’m usually nervous about spicy food, but everything we ate was super tasty and mild. The guide was kind and very understanding.”</p>
+  </div>
+  <div class="review">
+    <strong>Nina – Germany</strong>
+    <p>“Our guide was fantastic—really patient and funny. The no-spice options were surprisingly delicious, especially the cold noodles! Highly recommend!!”</p>
+  </div>
+</section>
+
+
 </main>
 </div>
 <footer>
