--- a/tourpackage/chongqing/chongqing-rongchang-tour-details.html
+++ b/tourpackage/chongqing/chongqing-rongchang-tour-details.html
@@ -197,6 +197,24 @@
 <li>Due to Chongqing's unique traffic conditions, certain congested areas may be accessed by taxi instead of private car. We appreciate your understanding and flexibility.</li>
 </ul>
 </section>
+
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Carlos – Spain</strong>
+    <p>“The Summer Cloth Museum was informative, and the town had such a relaxing vibe. A perfect day away from the city.”</p>
+  </div>
+  <div class="review">
+    <strong>Lucia – United States</strong>
+    <p>“Fantastic experience! The Lianggao jelly was a refreshing treat, and the tie-dye workshop was so much fun. Highly recommend!!”</p>
+  </div>
+  <div class="review">
+    <strong>Isabella – Italy</strong>
+    <p>“Highly recommend!”</p>
+  </div>
+</section>
+
+
 </main>
 </div>
 <footer>
