--- a/tourpackage/chongqing/chongqing-wulong-tour-details.html
+++ b/tourpackage/chongqing/chongqing-wulong-tour-details.html
@@ -199,6 +199,23 @@ This 12-hour private tour includes downtown Chongqing hotel pickup and drop-off,
 <li>Due to Chongqing's unique traffic conditions, certain congested areas may be accessed by taxi instead of private car. We appreciate your understanding and flexibility.</li>
 </ul>
 </section>
+
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Ben – Italy</strong>
+    <p>"Great! The Three Natural Bridges were breathtaking—felt like stepping into a movie set. Our guide was friendly and knowledgeable. Highly recommend!"</p>
+  </div>
+  <div class="review">
+    <strong>Sofia – Spain</strong>
+    <p>"Loved our guide!! The hike was challenging but rewarding. Furong Cave was magical—like a hidden world underground."</p>
+  </div>
+  <div class="review">
+    <strong>Jason – United States</strong>
+    <p>"Fantastic experience! The Longshuixia Gorge was serene and beautiful. Our guide tailored the pace to our group, making it a perfect day trip."</p>
+  </div>
+</section>
+
 </main>
 </div>
 <footer>
